seedboxk8s/applications/pubfiles/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubfiles
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pubfiles
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pubfiles
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        - name: caddy
          image: caddy:2.11.7-alpine
          securityContext:
            runAsUser: 6000
            runAsGroup: 6000
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/caddy/Caddyfile
              name: caddyfile
              readOnly: true
              subPath: Caddyfile
            - mountPath: /srv
              name: seedboxmedia-nfs
              readOnly: true
      volumes:
        - name: caddyfile
          configMap:
            name: pubfiles-caddyfile
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
