seedboxk8s/applications/pubfiles/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pubfiles
  namespace: tortuga
spec:
  selector:
    app: pubfiles
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
