seedboxk8s/applications/pubfiles/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pubfiles
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Pubfiles
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: mdi-folder-open
    gethomepage.dev/href: https://pubfiles.${productionClusterFqdn}

spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`pubfiles.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: pubfiles
          kind: Service
          port: 80
  tls:
    secretName: seedbox-wildcard-backing-secret
